there is no font style bold in css

--- a/drupalgap/drupalgap.css
+++ b/drupalgap/drupalgap.css
@@ -11,8 +11,8 @@ fieldset {
 	border: 1px solid black;
 }
 fieldset legend {
-	font-style: bold;
+	font-weight: bold;
 }
 label {
-	font-style: bold;
+	font-weight: bold;
 }
