--- a/drupalgap/css/drupalgap.css
+++ b/drupalgap/css/drupalgap.css
@@ -21,3 +21,11 @@ h2 {
 	font-size: 1.2em;
     color: #008000;
 }
+#karte {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    
+}
