Mapview for AA list Dashboard formating buttons

--- a/drupalgap/css/localmarket.css
+++ b/drupalgap/css/localmarket.css
@@ -50,7 +50,12 @@ h2 a:active {
 .ui-btn:link, .ui-btn:visited,
 .ui-btn-left:link, .ui-btn-left:visited {color: white;}
 */
+/*
+ * Dashboard
+ */
 
+#dashboard_button { margin-top: 15px; }
+ 
 /*
  * ListView
  */
@@ -88,7 +93,7 @@ h2 a:active {
  * Karte
  */
 
-#map_canvas {
+#map_canvas, #map_canvas_list {
 	width: 100%;
 	height: 400px;
 }
